<resources>
    <string name="app_name">EmergenciasYa!</string>
    <string name="intro">EmergenciasYa!</string>
    <string name="registro_de_incidentes">Registro de Incidentes</string>
    <string name="primeros_auxilios">Primeros Auxilios</string>
    <string name="alarma">Alarma</string>
    <string name="localizaci_n">Localización</string>
    <string name="contactos_de_confianza">Contactos de Confianza</string>
    <string name="numeros_oficiales">Números De Emergencia</string>
    <string name="configuracion">Configuración</string>
    <string name="ayuda">Ayuda</string>
    <string name="acerca_de">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="inicio_de_sesion">Inicio de Sesión</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrate">¿No tienes cuenta? Regístrate</string>
    <string name="sos_section">SOS Section</string>
    <string name="ubicacion_sms">Enviar ubicación via SMS</string>
    <string name="ubi_realtime">Compartir ubicación en tiempo real</string>
    <string name="localizacion">Localización</string>
    <string name="alarma_de_bolsillo">Alarma de Bolsillo</string>
    <string name="alarmabtn">¡ALARMA!</string>
    <string name="activar_flash">Activar Flash</string>
    <string name="indicacion">Presiona el botón para activar una alarma sonora. Usa el botón secundario para activar el flash como señal visual.</string>
    <string name="n_meros_de_emergencia">Números de Emergencia</string>
    <string name="pnc">PNC</string>
    <string name="bomberos">Bomberos</string>
    <string name="cruz_roja">Cruz Roja</string>
    <string name="cruz_verde">Cruz Verde</string>
    <string name="logo_de_comandos_de_salvamento">Logo de Comandos de Salvamento</string>
    <string name="comandos_de_salvamento">Comandos de Salvamento</string>
    <string name="protecci_n_civil">Protección Civil</string>
    <string name="aes">AES</string>
    <string name="sistema_de_emergencias_medicas">Sistema de Emergencias Medicas</string>

    <!-- Strings for Register Screen -->
    <string name="register_title">Crear cuenta</string>
    <string name="register_name_hint">Nombre</string>
    <string name="register_email_hint">Correo</string>
    <string name="register_password_hint">Contraseña</string>
    <string name="register_confirm_password_hint">Confirmar contraseña</string>
    <string name="register_button_text">Registrar</string>
    <string name="register_go_to_login">Ya tengo una cuenta</string>
    <string name="ubi">Compartir Ubicación</string>
    <string name="sos">SOS</string>
    <string name="incidente">Registro de incidentes</string>
    <string name="ubica">Compartir Ubicación</string>
    <string name="icono_de_contacto">Icono de contacto</string>
    <string name="icono_de_fecha">Icono de fecha</string>
    <string name="icono_de_incidente">Icono de incidente</string>
    <string name="eliminar_incidente">Eliminar incidente</string>
    <string name="compartir_en_otras_apps">Compartir en otras apps</string>
    <string name="enviar_ubicaci_n_por_sms">Enviar Ubicación por SMS</string>
    <string name="compartir_mi_ubicaci_n">Compartir Mi Ubicación</string>
    <string name="t_tulo_del_incidente">Título del incidente</string>
    <string name="ubicaci_n_opcional">Ubicación (opcional)</string>
    <string name="descripci_n_del_incidente">Descripción del incidente</string>
    <string name="guardar_incidente">Guardar incidente</string>
    <string name="incidentes_recientes">Incidentes recientes</string>
    <string name="no_hay_incidentes_registrados">No hay incidentes registrados</string>
    <string name="icono_de_idioma">Icono de idioma</string>
    <string name="idioma">Idioma</string>
    <string name="espa_ol">Español</string>
    <string name="icono_de_cerrar_sesi_n">Icono de cerrar sesión</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="icono_de_informaci_n">Icono de información</string>
    <string name="versi_n_de_la_app">Versión de la app</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="icono_de_pol_tica_de_privacidad">Icono de política de privacidad</string>
    <string name="t_rminos_y_pol_tica_de_privacidad">Términos y política de privacidad</string>
    <string name="acerca_de1">Acerca de</string>
    <string name="general">General</string>
    <string name="no_hay_contactos">No hay contactos</string>
    <string name="no_hay_contactos_de_confianza">No hay contactos de confianza</string>
    <string name="usa_el_bot_n_para_a_adir_uno">Usa el botón \'+\' para añadir uno.</string>
    <string name="a_adir_contacto">Añadir Contacto</string>
    <string name="buscar_una_situaci_n">Buscar una situación...</string>
    <string name="nombre_del_contacto">Nombre del Contacto</string>
    <string name="n_mero_de_tel_fono">Número de Teléfono</string>
    <string name="nombre_de_la_instituci_n">Nombre de la Institución</string>
    <string name="n_mero">Número</string>
    <string name="t_tulo_del_tema">Título del Tema</string>
    <string name="descripci_n_del_tema">Descripción del tema...</string>
</resources>